
CREATE SCHEMA IF NOT EXISTS stg; CREATE SCHEMA IF NOT EXISTS retail_dw;
DROP TABLE IF EXISTS stg.stores; CREATE TABLE stg.stores(store_id text,name text,region text,format text,opened_date date,closed_date text);
DROP TABLE IF EXISTS stg.products; CREATE TABLE stg.products(sku text,upc text,brand text,category text,subcategory text,size text,cost numeric(12,2),list_price numeric(12,2),status text,effective_from timestamp);
DROP TABLE IF EXISTS stg.customers; CREATE TABLE stg.customers(customer_id text,segment text,loyalty_tier text,created_ts timestamp);
DROP TABLE IF EXISTS stg.promos; CREATE TABLE stg.promos(promo_id text,name text,type text,benefit_type text,benefit_value numeric(12,2),min_threshold numeric(12,2),max_uses_per_cust text,start_ts timestamp,end_ts timestamp,channels_allowed text,inclusion_rule_json jsonb,exclusion_rule_json jsonb,created_by text,created_ts timestamp,status text);
DROP TABLE IF EXISTS stg.promo_product_map; CREATE TABLE stg.promo_product_map(promo_id text,sku text,rule_type text);
DROP TABLE IF EXISTS stg.inventory_snapshots; CREATE TABLE stg.inventory_snapshots(snapshot_date date,store_id text,sku text,on_hand numeric(14,3),on_order numeric(14,3),cost numeric(14,2));
DROP TABLE IF EXISTS stg.orders; CREATE TABLE stg.orders(order_id text,order_ts timestamp,store_id text,customer_id text,channel text);
DROP TABLE IF EXISTS stg.order_items; CREATE TABLE stg.order_items(order_id text,order_line_id text,sku text,qty numeric(12,3),unit_price numeric(14,2),gross_sales numeric(14,2),promo_id text,discount_amt numeric(14,2),net_sales numeric(14,2));
DROP TABLE IF EXISTS retail_dw.dim_date; CREATE TABLE retail_dw.dim_date(date_key int primary key, date date not null, day_name text, week_of_year int, month int, month_name text, quarter int, year int, fiscal_month int, fiscal_quarter int, fiscal_year int, is_weekend boolean);
DROP TABLE IF EXISTS retail_dw.dim_store; CREATE TABLE retail_dw.dim_store(store_key bigserial primary key, store_id text unique, name text, region text, format text, opened_date date, closed_date date);
DROP TABLE IF EXISTS retail_dw.dim_product; CREATE TABLE retail_dw.dim_product(product_key bigserial primary key, sku text, upc text, brand text, category text, subcategory text, size text, cost numeric(12,2), list_price numeric(12,2), status text, effective_from timestamp not null, effective_to timestamp, is_current boolean default true);
DROP TABLE IF EXISTS retail_dw.dim_customer; CREATE TABLE retail_dw.dim_customer(customer_key bigserial primary key, customer_id text, segment text, loyalty_tier text, effective_from timestamp not null, effective_to timestamp, is_current boolean default true);
DROP TABLE IF EXISTS retail_dw.dim_promo; CREATE TABLE retail_dw.dim_promo(promo_key bigserial primary key, promo_id text, name text, type text, benefit_type text, benefit_value numeric(12,2), min_threshold numeric(12,2), max_uses_per_cust int, start_ts timestamp, end_ts timestamp, channels_allowed text, inclusion_rule_json jsonb, exclusion_rule_json jsonb, created_by text, created_ts timestamp, status text, effective_from timestamp not null, effective_to timestamp, is_current boolean default true);
DROP TABLE IF EXISTS retail_dw.bridge_promo_product; CREATE TABLE retail_dw.bridge_promo_product(promo_key bigint references retail_dw.dim_promo(promo_key), product_key bigint references retail_dw.dim_product(product_key), rule_type text, primary key(promo_key, product_key, rule_type));
DROP TABLE IF EXISTS retail_dw.fact_sales; CREATE TABLE retail_dw.fact_sales(order_id text, order_line_id text, date_key int references retail_dw.dim_date(date_key), store_key bigint references retail_dw.dim_store(store_key), product_key bigint references retail_dw.dim_product(product_key), customer_key bigint references retail_dw.dim_customer(customer_key), promo_key bigint references retail_dw.dim_promo(promo_key), qty numeric(12,3), gross_sales numeric(14,2), discount_amt numeric(14,2), net_sales numeric(14,2), channel text, primary key(order_id, order_line_id));
DROP TABLE IF EXISTS retail_dw.fact_promo_redemption; CREATE TABLE retail_dw.fact_promo_redemption(basket_id text, date_key int references retail_dw.dim_date(date_key), store_key bigint references retail_dw.dim_store(store_key), product_key bigint references retail_dw.dim_product(product_key), customer_key bigint references retail_dw.dim_customer(customer_key), promo_key bigint references retail_dw.dim_promo(promo_key), redemption_qty numeric(12,3), discount_amt numeric(14,2), primary key(basket_id, promo_key, product_key));
DROP TABLE IF EXISTS retail_dw.fact_inventory; CREATE TABLE retail_dw.fact_inventory(date_key int references retail_dw.dim_date(date_key), store_key bigint references retail_dw.dim_store(store_key), product_key bigint references retail_dw.dim_product(product_key), on_hand numeric(14,3), on_order numeric(14,3), cost numeric(14,2), primary key(date_key, store_key, product_key));
CREATE OR REPLACE VIEW retail_dw.v_bad_promo_unlimited_cash AS SELECT promo_id, name, benefit_type, benefit_value, max_uses_per_cust FROM retail_dw.dim_promo WHERE is_current = true AND benefit_type = 'CASH' AND (max_uses_per_cust IS NULL OR max_uses_per_cust <= 0);
CREATE OR REPLACE VIEW retail_dw.v_promo_date_issues AS SELECT promo_id, name, start_ts, end_ts FROM retail_dw.dim_promo WHERE is_current = true AND (start_ts IS NULL OR end_ts IS NULL OR start_ts > end_ts);
DO $$ DECLARE d DATE := DATE '2023-01-01'; BEGIN WHILE d <= DATE '2026-12-31' LOOP INSERT INTO retail_dw.dim_date VALUES (EXTRACT(YEAR FROM d)::int*10000 + EXTRACT(MONTH FROM d)::int*100 + EXTRACT(DAY FROM d)::int, d, TO_CHAR(d,'Dy'), EXTRACT(WEEK FROM d)::int, EXTRACT(MONTH FROM d)::int, TO_CHAR(d,'Mon'), EXTRACT(QUARTER FROM d)::int, EXTRACT(YEAR FROM d)::int, ((EXTRACT(MONTH FROM d)::int + 1) % 12) + 1, ((EXTRACT(QUARTER FROM d)::int % 4) + 1), EXTRACT(YEAR FROM d)::int, (EXTRACT(ISODOW FROM d) IN (6,7))) ON CONFLICT (date_key) DO NOTHING; d := d + INTERVAL '1 day'; END LOOP; END $$;
